fix: update spacing container value for improved layout responsiveness

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,7 +18,7 @@
   --text-h6: 1.125rem;
   --text-smal: 0.8125rem;
   --text-main: 0.975rem;
-  --spacing-container: min(90%, 75rem);
+  --spacing-container: min(90%, 100rem);
   --tracking-main: 0.125rem;
   --color-border: #cfcfcf;
   --color-error: #ff0000;
